{{$NEXT}}

0.6.10  2023-04-15T09:36:17+12:00
    - Make FontConfig an optional dependency. Mostly to make this module
      installable under Windows.

0.6.9  2022-11-11T07:06:39+13:00
    - Further minor fixes to CID font handling

0.6.8  2022-10-31T13:54:05+13:00
    - Fixed detection and handling of CID indexed fonts. These are
      mapped to Fonts of Subtype Type0 with a descendant CIDFontType0
      or CIDFontType2 font.
    - Added script pdf-font-preview.raku

0.6.7  2022-07-27T07:09:34+12:00
    - Fix decoding of CMap ligatures #19

0.6.6  2022-07-06T08:26:48+12:00
    - Further fixes to CID allocation in CMap encoder

0.6.5  2022-07-06T07:28:35+12:00
    - Improved CID allocation in CMap encoder
    - Mostly replace embedded DejaVuSans with more compact Vera font
      in the test suite PDF files. Reduce distribution size #19
    - Allow for fractional values in font widths (/W) array
    - Fix font subsetting (HarfBuzz::Subset integration)
    - Protect setting encoder differences

0.6.4  2022-05-28T09:55:17+12:00
    - Fix font-descriptor() handling of fonts with a TT_PCLT table

0.6.3  2022-05-18T09:51:56+12:00
    - Use thread-safe version of Font::FreeType. Protect internal low-level
      glyph access.

0.6.2  2022-05-17T08:10:11+12:00
    - Improved handling of core fonts. Use standard core-font metrics over
      substituted font metrics.
    - Provide separate ax and sx attributes in glyphs. ax is the actual expected
      advance, taken from the /Widths or /W entry for the font, or in the case
      of core fonts, the standard width for the character. sx is the width of the
      substituted font. This helps with the scaling and placement of glyphs while
      rendering.

0.6.1  2022-05-12T08:23:14+12:00
    Initial page-level thread-safety
    - Bump PDF and PDF::Content to thread-safe versions
    - Lock dynamic module loading
    - Lock font encoding and dictionary creation
    - Add t/threads.t

0.6.0  2022-01-30T13:36:52+13:00