@@ -10,7 +10,7 @@
     "Font::FreeType:ver<0.4.3+>",
     "Hash::int",
     "Native::Packing",
-    "PDF::Content:ver<0.6.1+>",
+    "PDF::Content:ver<0.6.11+>",
     "PDF::Lite:ver<0.0.11+>",
     "PDF:ver<0.5.4+>"
   ],
@@ -42,5 +42,5 @@
   ],
   "test-depends": [
   ],
-  "version": "0.6.10"
+  "version": "0.6.11"
 }
